kubernetes/overlays/production/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: api
spec:
    hosts:
        - api.cloudfleet.ai
    gateways:
        - istio-gateway-external
    http:
        - match:
              - uri:
                    prefix: /healthz
          directResponse:
              status: 404
        - route:
              - destination:
                    host: api
          corsPolicy:
              allowOrigins:
                  - exact: "https://console.cloudfleet.ai"
                  - exact: "https://calculator.cloudfleet.ai"
              allowMethods:
                  - GET
                  - POST
                  - PUT
                  - DELETE
                  - PATCH
                  - OPTIONS
              allowHeaders:
                  - authorization
                  - range
                  - content-type
